# dashboard-api

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  server.js
.github/workflows/: docker-image.yml
app/: config.py  main.py
app/plugins/: album.py  eoguide.py  ical.py  icloud_album.py  netatmo.py  publictransportation.py  sonos.py  speedtest.py  weather.py
middleware/: auth.js
routes/: eo-guide.js  essential-photos.js  ical.js  icloud-album.js  netatmo.js  public-transportation.js  simple-quote.js  sonos.js  speedtest.js  tesla.js  unifi.js  weather.js  withings.js
