[project]
name = "dakboard-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi-cache2>=0.2.2",
    "fastapi[standard]>=0.115.5",
    "httpx>=0.28.0",
    "icalendar>=6.1.0",
    "pyatmo>=8.1.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2024.2",
    "soco>=0.30.6",
]
